--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ alembic>=1.12.0
 # Configuration
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
+pydantic[email]
 
 # SSE
 sse-starlette>=1.6.5
@@ -44,3 +45,5 @@ openpyxl>=3.1.0
 python-multipart
 
 matplotlib 
+pyjwt>=2.0.1
+
