--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,15 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.0",
+    "lucide-react": "^0.515.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "tedious": "^18.6.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -40,10 +45,13 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "buffer": "^6.0.3",
+    "concurrently": "^8.2.2",
     "json-server": "^0.17.4",
-    "concurrently": "^8.2.2"
+    "postcss": "^8.4.31",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.0"
   }
 }
