--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,34 +1,27 @@
-# First stage: Install MSSQL ODBC driver
-FROM debian:11-slim as odbc-installer
-
-RUN apt-get update && apt-get install -y \
-    curl \
-    gnupg2 \
-    apt-transport-https \
-    ca-certificates \
-    unixodbc \
-    unixodbc-dev
-
-# Install MSSQL ODBC driver
-RUN curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
-    curl -fsSL https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
-    apt-get update && \
-    ACCEPT_EULA=Y apt-get install -y msodbcsql18
-
-# Second stage: Python application
 FROM python:3.11-slim
-
 WORKDIR /app
 
-# Install basic dependencies
-RUN apt-get update && apt-get install -y \
-    unixodbc \
-    unixodbc-dev \
-    && rm -rf /var/lib/apt/lists/*
+# Install initial system dependencies, but specifically remove unixodbc and unixodbc-dev if they conflict
+# We will rely on the Microsoft repository to provide compatible versions if needed.
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        curl \
+        gnupg2 \
+        apt-transport-https \
+        ca-certificates && \
+    # Remove potentially conflicting unixodbc packages if they were pre-installed
+    apt-get remove -y --purge unixodbc unixodbc-dev libodbc2 libodbcinst2 && \
+    rm -rf /var/lib/apt/lists/*
 
-# Copy ODBC driver from first stage
-COPY --from=odbc-installer /opt/microsoft/msodbcsql18 /opt/microsoft/msodbcsql18
-COPY --from=odbc-installer /etc/odbcinst.ini /etc/odbcinst.ini
+# Install ODBC Driver 18 using Microsoft's script
+# This script will install msodbcsql18 and its required dependencies,
+# including compatible unixodbc components.
+RUN curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
+    curl https://packages.microsoft.com/keys/microsoft.asc | tee /etc/apt/trusted.gpg.d/microsoft.asc && \
+    apt-get update && \
+    ACCEPT_EULA=Y apt-get install -y msodbcsql18 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
