--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3.8'
+# docker-compose.yml - Use this for production deployment.
+# It pulls pre-built images from Docker Hub.
 
 services:
   postgres:
@@ -19,13 +20,10 @@ services:
       retries: 5
 
   backend:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
+    image: jalalirs/tex2sql-backend:latest # <--- Pulls from Docker Hub
     env_file:
       - .env
     environment:
-      # Override Docker-specific values
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/tex2sql
     volumes:
       - ./backend/data:/app/data
@@ -37,9 +35,7 @@ services:
         condition: service_healthy
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: jalalirs/tex2sql-frontend:latest # <--- Pulls from Docker Hub
     ports:
       - "3000:3000"
     depends_on:
