--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - ./backend/data:/app/data
       - ./backend/uploads:/app/uploads
+      - ./chromadb_model:/root/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx
     ports:
       - "6020:6020"
     depends_on:
