--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,14 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-plotly.js": "^2.6.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.0",
     "lucide-react": "^0.515.0",
+    "plotly.js-basic-dist": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
