--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -52,21 +52,11 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Create a non-root user for the application
-RUN groupadd -r appuser && useradd -r -g appuser appuser
-
 # Create necessary directories for your application
-RUN mkdir -p /app/data /app/uploads /app/chroma_db /app/onnx_models && \
-    chown -R appuser:appuser /app
+RUN mkdir -p /app/data /app/uploads /app/chroma_db /app/onnx_models
 
 # Copy application code into the image
 COPY . .
-
-# Ensure proper ownership of all files
-RUN chown -R appuser:appuser /app
-
-# Switch to non-root user
-USER appuser
 
 # Expose the port your application will listen on
 EXPOSE 6020
