--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - .env
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/chatsql
+      - CHROMADB_BASE_PATH=/app
     volumes:
       - ./backend/data:/app/data
       - ./backend/uploads:/app/uploads
